<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>core-rule-engine</artifactId>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-mongodb</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>${mongodb.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-cache</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>${cache.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
    <dependency>
      <artifactId>ehcache</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>jaxb-runtime</artifactId>
          <groupId>org.glassfish.jaxb</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.ehcache</groupId>
      <version>${ehcache.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.cache</groupId>
      <artifactId>cache-api</artifactId>
      <version>1.1.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
    <dependency>
      <artifactId>jaxb-api</artifactId>
      <groupId>javax.xml.bind</groupId>
      <version>${jaxb-api.version}</version>
    </dependency>
    <dependency>
      <artifactId>mvel2</artifactId>
      <groupId>org.mvel</groupId>
      <version>${mvel.version}</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${jupiter.api.version}</version>
    </dependency>
    <dependency>
      <artifactId>mockito-junit-jupiter</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>${mockito.jupiter.version}</version>
    </dependency>
  </dependencies>
  <description>core-rule-engine</description>
  <groupId>tech.neatnet</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>core-rule-engine</name>

  <properties>
    <cache.version>3.1.2</cache.version>
    <ehcache.version>3.10.0</ehcache.version>
    <java.version>21</java.version>
    <jaxb-api.version>2.3.1</jaxb-api.version>
    <jupiter.api.version>5.10.1</jupiter.api.version>
    <lombok.version>1.18.30</lombok.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <mockito.jupiter.version>5.7.0</mockito.jupiter.version>
    <mongodb.version>3.1.5</mongodb.version>
    <mvel.version>2.5.0.Final</mvel.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>0.0.1-SNAPSHOT</version>
</project>
